# Chemical-Modeling

./: .gitignore  ERROR.md  MEMORY.md  README.md  environment.yml  pyproject.toml  run.sh
.github/: copilot-instructions.md
data/: reactor_specs_template.csv
scripts/: setup-env.sh
src/: reaction_model.py  solubility_model.py
src/chemmodel/: __init__.py  constants.py
src/chemmodel/chemistry/: __init__.py  presets.py  pubchem.py  structures.py
src/chemmodel/engines/: __init__.py  base.py  cp2k_engine.py  demo.py  psi4_engine.py  pyscf_engine.py
src/chemmodel/md/: __init__.py  langevin.py
src/chemmodel/reactions/: __init__.py  pes.py
src/chemmodel/reactors/: __init__.py  kinetics.py
src/chemmodel/solubility/: __init__.py  __main__.py  cli.py  model.py
src/chemmodel/ui/: __init__.py  sandbox_app.py  simulation_app.py  theme.py  viz.py
tests/: test_engines.py  test_kinetics.py  test_reactions.py  test_solubility.py  test_structures.py
